--- a/index.html
+++ b/index.html
@@ -367,6 +367,26 @@
                 </div>
               </div>
             </div>
+
+             <div class="blog-wrap">
+              <div class="blog-card">
+                <div class="blog-image">
+                  <img src="./img/1694746896042.jpg" alt="" />
+                </div>
+
+                <div class="blog-content">
+                  <div class="blog-info">
+                    <h5 class="blog-date">September, 14 2023</h5>
+                    <h5 class="blog-user"><i class="fas fa-user"></i>Admin</h5>
+                  </div>
+                  <h3 class="title-sm">Zicaboi's Red Cube (Game)</h3>
+                  <p class="blog-text">
+                    Zicaboi's Red Cube merupakan game 3d runner yang dikembangkan oleh Saya dengan Game Engine Unity dan dibantu dengan visual scripting
+                  </p>
+                  <a href="https://fiveknights.itch.io/zicaboi-red-cube" class="btn small">Play Now</a>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </section>
